--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-handlebars": "^3.0.0",
     "hbs": "^4.0.1",
     "mongoose": "^5.0.16",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
