--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Saad",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
