--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.3",
-    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "mongoose": "^5.0.16",
-    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
+    "morgan": "^1.9.0",
     "nodemon": "^1.17.3"
   }
 }
