--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -20,6 +21,7 @@
     "mongoose": "^5.0.16",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^2.1.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
