--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -21,6 +22,7 @@
     "mongoose": "^5.0.16",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "socket.io": "^2.1.0",
     "validator": "^9.4.1"
   },
