--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Saad",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
