--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.16",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
