--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
@@ -29,7 +31,6 @@
     "validator": "^9.4.1"
   },
   "devDependencies": {
-    "morgan": "^1.9.0",
     "nodemon": "^1.17.3"
   }
 }
