--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
+    "nodemailer-express-handlebars": "^3.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
